# dolat-hackthon

./: LICENSE
backend/: CMakeLists.txt  main.cpp
frontend/: package-lock.json
frontend/src/: App.js
frontend/src/components/: Buy.js  Cards.js  Footer.js  HeroSection.js  Navbar.js  Otp.js  Upload.js
frontend/src/components/pages/: Help.js  Vote.js
